// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProviderRadio Test User Login test Snapshot 1`] = `
<div>
  <Styled(RadioGroup)
    onChange={[Function]}
    size="small"
    value={0}
  >
    <RadioButton
      value={2}
    >
      MetaMask
    </RadioButton>
    <RadioButton
      value={3}
    >
      Ledger
    </RadioButton>
  </Styled(RadioGroup)>
  <Styled(Modal)
    footer={
      Array [
        <Button
          block={false}
          ghost={false}
          htmlType="button"
          loading={false}
          onClick={[Function]}
          type="ghost"
        >
          Connect
        </Button>,
      ]
    }
    maskClosable={false}
    onCancel={[Function]}
    title="LEDGER ACCOUNT MANAGE"
    visible={false}
  >
    Please make sure Ledger is connected.
    <br />
    <p
      className="ledger-reminder"
    >
      <b>
        Contract data
      </b>
       and 
      <b>
        Browser support
      </b>
       must be set to
       
      <b>
        Yes
      </b>
    </p>
  </Styled(Modal)>
</div>
`;

exports[`ProviderRadio Test User Login test Snapshot 2`] = `
<div>
  <Styled(RadioGroup)
    onChange={[Function]}
    size="small"
    value={0}
  >
    <RadioButton
      value={2}
    >
      MetaMask
    </RadioButton>
    <RadioButton
      value={3}
    >
      Ledger
    </RadioButton>
  </Styled(RadioGroup)>
  <Styled(Modal)
    footer={
      Array [
        <Button
          block={false}
          ghost={false}
          htmlType="button"
          loading={false}
          onClick={[Function]}
          type="ghost"
        >
          Connect
        </Button>,
      ]
    }
    maskClosable={false}
    onCancel={[Function]}
    title="LEDGER ACCOUNT MANAGE"
    visible={false}
  >
    Please make sure Ledger is connected.
    <br />
    <p
      className="ledger-reminder"
    >
      <b>
        Contract data
      </b>
       and 
      <b>
        Browser support
      </b>
       must be set to
       
      <b>
        Yes
      </b>
    </p>
  </Styled(Modal)>
</div>
`;

exports[`ProviderRadio Test User Login test Snapshot 3`] = `
<div>
  <Styled(RadioGroup)
    onChange={[Function]}
    size="small"
    value={0}
  >
    <RadioButton
      value={2}
    >
      MetaMask
    </RadioButton>
    <RadioButton
      value={3}
    >
      Ledger
    </RadioButton>
  </Styled(RadioGroup)>
  <Styled(Modal)
    footer={
      Array [
        <Button
          block={false}
          ghost={false}
          htmlType="button"
          loading={false}
          onClick={[Function]}
          type="ghost"
        >
          Connect
        </Button>,
      ]
    }
    maskClosable={false}
    onCancel={[Function]}
    title="LEDGER ACCOUNT MANAGE"
    visible={true}
  >
    Please make sure Ledger is connected.
    <br />
    <p
      className="ledger-reminder"
    >
      <b>
        Contract data
      </b>
       and 
      <b>
        Browser support
      </b>
       must be set to
       
      <b>
        Yes
      </b>
    </p>
  </Styled(Modal)>
</div>
`;
